tdf#142833 sd notebookbar: There is no PrintPreview, use WebHtml
Well, that surprised me, but there is no print preview available
in Draw or Impress. They can only do a pathetic
Preview in Web Browser.

AFAIAC, this could be removed since it is so useless.
But that would leave an empty hole under "Print directly"
so for now just substitute something useless for something non-functional.

Change-Id: If7fbb1b549c2b24d2ca6f77f14333811c405e465
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153196
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>

--- a/sd/uiconfig/sdraw/ui/notebookbar.ui
+++ b/sd/uiconfig/sdraw/ui/notebookbar.ui
@@ -554,10 +554,10 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuFile-PrintPreview">
+      <object class="GtkMenuItem" id="MenuFile-WebHtml">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="action_name">.uno:PrintPreview</property>
+        <property name="action_name">.uno:WebHtml</property>
       </object>
     </child>
     <child>
@@ -2896,9 +2896,9 @@
                                 <property name="toolbar_style">both-horiz</property>
                                 <property name="show_arrow">False</property>
                                 <child>
-                                  <object class="GtkToolButton" id="File-PrintPreview1">
+                                  <object class="GtkToolButton" id="File-WebHtml">
                                     <property name="visible">True</property>
-                                    <property name="action_name">.uno:PrintPreview</property>
+                                    <property name="action_name">.uno:WebHtml</property>
                                     <property name="use_underline">True</property>
                                   </object>
                                   <packing>
