--- a/sc/uiconfig/scalc/ui/notebookbar_groupedbar_full.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar_groupedbar_full.ui
@@ -1323,7 +1323,7 @@
     </child>
     <child>
       <object class="GtkMenuItem" id="MenuFile-PrintPreview">
-        <property name="visible">True</property>
+        <property name="visible">False</property>
         <property name="can_focus">False</property>
         <property name="action_name">.uno:PrintPreview</property>
       </object>
