tdf#147056 sc: convert xml menu to popupmenu .uno:PrintRangesMenu
The labelling in the notebookbar left much to be desired
when adding the print ranges separately in the "context menus".

Making this into a proper submenu fixes the problem.

Thanks to Maxim for reviewing and for the commit template:
commit 0e7cd653ea90da388820220bf6a3eb140b57bbd6
Author: Maxim Monastirsky on Mon Jan 25 01:09:03 2016 +0200
    tdf#86567 Dropdown for conditional formatting

Change-Id: If92836ee29d322f5a2fca1e27d2e034e5cc995e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153402
Tested-by: Justin Luth <jluth@mail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>

--- a/sc/uiconfig/scalc/ui/notebookbar.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar.ui
@@ -1380,31 +1380,10 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuPage-DefinePrintArea">
+      <object class="GtkMenuItem" id="MenuPage-PrintRangesMenu">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="action_name">.uno:DefinePrintArea</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="MenuPage-AddPrintArea">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="action_name">.uno:AddPrintArea</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="MenuPage-EditPrintArea">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="action_name">.uno:EditPrintArea</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="MenuPage-DeletePrintArea">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="action_name">.uno:DeletePrintArea</property>
+        <property name="action_name">.uno:PrintRangesMenu</property>
       </object>
     </child>
     <child>
