--- a/sc/uiconfig/scalc/ui/notebookbar_groupedbar_compact.ui
+++ b/sc/uiconfig/scalc/ui/notebookbar_groupedbar_compact.ui
@@ -451,31 +451,10 @@
       </object>
     </child>
     <child>
-      <object class="GtkMenuItem" id="MenuEdit-DefinePrintArea">
+      <object class="GtkMenuItem" id="MenuEdit-PrintRangesMenu">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="action_name">.uno:DefinePrintArea</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="MenuEdit-AddPrintArea">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="action_name">.uno:AddPrintArea</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="MenuEdit-EditPrintArea">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="action_name">.uno:EditPrintArea</property>
-      </object>
-    </child>
-    <child>
-      <object class="GtkMenuItem" id="MenuEdit-DeletePrintArea">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="action_name">.uno:DeletePrintArea</property>
+        <property name="action_name">.uno:PrintRangesMenu</property>
       </object>
     </child>
     <child>
